k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app-service
spec:
  type: NodePort 
  selector:
    app: laravel-ecommerce 
  ports:
    - port: 80     
      targetPort: 80
      nodePort: 30008
